# Offline_ai_agents

./: .coverage  .env.example  ALL_ISSUES_FIXED.md  ARCHITECTURE.md  CHANGELOG.md  CODEX_FILES.txt  CODEX_IMPLEMENTATION.md  CODEX_LAYOUT.txt  CODEX_QUICKSTART.md  COMPLETE_VERIFICATION_REPORT.md  INSTALLATION_COMPLETE.md  LAUNCH_GUIDE.md  MODEL_CONFIG_COMPLETE.md  MODEL_CONNECTION_SUMMARY.md  PROOF_OF_REAL_AI.md  PROVIDER_SETUP.md  README.md  README_CODEX.md  READY_TO_LAUNCH.md  TEST_DASHBOARD_FIXED.md  demo_live_agent.py  diagnose_tui.py  install_codex.sh  launch_codex.sh  math_operations.py  pyproject.toml  run_agent.py  run_with_timeout.py  setup.py  sitecustomize.py  task_20251006-233803_0.json  task_20251006-233831_0.json  task_20251006-233930_0.json  task_20251006-234004_0.json  task_20251009-072057_0.json  task_20251009-072117_1.json  task_20251009-072137_2.json  task_20251009-072157_3.json  task_20251009-072218_4.json  task_20251009-072238_5.json  (+475 more)
agent/: __init__.py  cli.py  config.json  providers.py  run.py  task_executor.py  utils.py  view.py
agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent/analyzers/: bandit.py  base.py  pip_audit.py  pytest_cov.py  repo_hygiene.py  ruff.py  semgrep.py  ui.py
agent/local/: ollama_provider.sh
agent/providers/: __init__.py  keys.py  ollama.py
agent/state/: commit_scheduler.json  scheduler.json  session.json  thinking.jsonl
agent/tui/: __init__.py  app.py  diff_panel.py  generated_navigation.json  keymap.py  navigation.py  simple_app.py  state_watcher.py  styles.css  test_data_generator.py
agent_cli/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  __init__.py  __main__.py  agent_controller.py  app.py  interaction.py  models.py  pytest_plugin.py  state_manager.py  state_sync.py  theme.py  ui_manager.py
agent_cli/config/: __init__.py  default_settings.json
agent_cli/panels/: __init__.py  base.py  code_editor.py  help.py  home.py  logs.py  model_config.py  task_manager.py  thinking.py  verification.py
agent_control_panel/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  TESTING_PLAN.md  USAGE.md  __init__.py  __main__.py  pyproject.toml
agent_control_panel/core/: __init__.py  agent_controller.py  models.py  state_manager.py  theme_manager.py  ui_manager.py
agent_control_panel/panels/: __init__.py  base_panel.py  help_panel.py  home_panel.py  logs_panel.py  task_panel.py  thinking_panel.py
agent_control_panel/tests/: __init__.py  conftest.py  test_agent_controller.py  test_base_panel.py  test_keyboard.py  test_layout.py  test_state_manager.py  test_theme_manager.py  test_ui_manager.py
agent_control_panel/utils/: __init__.py  keyboard.py  layout.py
agent_dashboard/: CODEX_README.md  README.md  __main__.py  codex_dashboard.py  codex_demo.py  dashboard.py  enhanced_cli.py  simple_cli.py
agent_dashboard/codex_widgets/: __init__.py  code_viewer.py  log_viewer.py  metrics_sidebar.py  model_config_panel.py  nav_sidebar.py  (+4 more)
scripts/: agent  agent-start  agent-view  run_agent_forever.sh
tests/: conftest.py  test_agent_integration.py  test_app_integrations.py  test_code_editor_panel.py  test_error_handling.py  test_hello.py  test_help_panel.py  test_home_panel.py  test_logs_panel.py  test_model_config_panel.py  test_navigation.py  test_state_management.py  test_task_manager_panel.py  test_thinking_panel.py  test_tui.py  test_ui_components.py  test_verification_panel.py
(+100 files in other folders)
