[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cli"
version = "0.1.0"
description = "Autonomous agent terminal control panel"
readme = "agent_cli/README.md"
authors = [
  {name = "Dylan Millson"}
]
requires-python = ">=3.9"
dependencies = [
  "typing-extensions>=4.0",
]
optional-dependencies.dev = [
  "pytest>=7.0",
  "black>=23.0",
  "ruff>=0.0.275"
]

[project.scripts]
agent-cli = "agent_cli.__main__:cli"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = []
