[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent"
version = "1.2.0"
description = "Modern CLI control panel for autonomous AI agents"
readme = "agent_dashboard/README.md"
authors = [
  {name = "Dylan Millson"}
]
requires-python = ">=3.11"
dependencies = []
optional-dependencies.dev = [
  "pytest>=7.0",
  "black>=23.0",
  "ruff>=0.0.275"
]

[project.scripts]
agent = "agent_dashboard.__main__:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = []
